--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<h2>Gold Count: {{ totalGold }}</h2>
+<h2>Gold Count: {{ myGold }}</h2>
 <app-locations></app-locations>
 <app-activities></app-activities>
